--- a/index.html
+++ b/index.html
@@ -15,9 +15,27 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum debitis, rem reiciendis, assumenda consequatur ut, deserunt libero ducimus saepe quaerat dolor, officiis impedit ex inventore sunt eius facilis nisi in.</p>
-    <button class="btn btn-primary">Enviar</button>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed btn-hamburguer" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand contentLogo" href="#"><img src="assets/img/logo.png" alt="Logo LabCar"></a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Viaja</a></li>
+            <li><a href="#">Conduce</a></li>
+            <li><a href="#">Inicia Sesión</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
 
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
