--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap -->
     <link href="assets/css/main.css" rel="stylesheet">
     <title>LabCar | Laboratoria</title>
@@ -35,6 +36,39 @@
         </div>
       </div>
     </nav>
+    <header class="">
+      <div class="contentTaxi hMobile hDesktop">
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-9 col-xs-offset-3 description-mobile">
+            <p>Comienza a</p>
+            <p>viajar con</p>
+            <img src="assets/img/logo-blanco.png" alt="Logo Lab Car"><br>
+            <button type="button" class="btn btn-default">Descarga el App</button>
+          </div>
+          <div class="col-md-6 col-md-offset-6 description-Desktop">
+            <div class="primerP">
+              <h2>Disfruta del viaje</h2>
+              <h2>Eres dueño de tu tiempo</h2>
+            </div>
+            <div class="segundoP">
+              <p>Viaja con <img src="assets/img/logo-blanco.png" alt="Logo Lab Car"></p>
+            </div>
+            <p>Registrate</p>
+            <div class="tercerP">
+              <hr>
+            </div>
+            
+              
+             <!--  <div class="padding">O bien</div> -->
+            <button type="button" class="btn btn-default">Conviertete en un conductor</button>
+        </div>
+        </div>
+      </div>
+
+
+    </header>
 
 
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
