--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </nav>
-    <header class="">
+    <header>
       <div class="contentTaxi hMobile hDesktop">
       </div>
       <div class="container-fluid">
@@ -47,7 +47,7 @@
             <img src="assets/img/logo-blanco.png" alt="Logo Lab Car"><br>
             <button type="button" class="btn btn-default">Descarga el App</button>
           </div>
-          <div class="col-md-6 col-md-offset-6 description-Desktop">
+          <div class="col-md-5 col-md-offset-7 description-Desktop">
             <div class="primerP">
               <h2>Disfruta del viaje</h2>
               <h2>Eres dueño de tu tiempo</h2>
@@ -59,15 +59,10 @@
             <div class="tercerP">
               <hr>
             </div>
-            
-              
-             <!--  <div class="padding">O bien</div> -->
             <button type="button" class="btn btn-default">Conviertete en un conductor</button>
         </div>
         </div>
       </div>
-
-
     </header>
 
 
