definiendo estructura y estilos

--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
         </div>
       </div>
     </header>
+    <section id="info">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-7 col-md-7">
+            <div class="content-celular">
+              <h2>La nueva App</h2>
+              <img src="assets/img/celular.png" alt="celular">
+            </div>
+          </div>
+          <div class="col-md-5 col-sm-5">
+            <div class="textApp">
+              <h2>Descarga la nueva app</h2>
+              <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
+              <p>Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> 
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Incluir todos tus scripts apartir de este punto -->
