--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             </div>
           </div>
         </div>
+        <div class="row border-0">
+          <div class="col-xs-12 col-sm-12 containerFlex">
+            <p>Llega a tu destino aún más rápido</p>
+          </div>
+        </div>
+
       </div>
     </section> 
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
