--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
       </div>
     </nav>
     <header>
-      <div class="contentTaxi hMobile hDesktop">
-      </div>
+      <div class="contentTaxi hMobile hDesktop"></div>
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-9 col-xs-offset-3 description-mobile">
@@ -89,6 +88,28 @@
 
       </div>
     </section> 
+    <section id="conductor">
+      <div class="contentConduce altMobile altDesktop"></div>
+      <div class="container-fluid widthFull widthDesk">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-6 col-lg-offset-6">
+            <div class="textcontent">
+              <h2>Conduce cuando quieras</h2>
+              <p>LabCar es una opción flexible para alcanzar tus metas financieras.</p>
+              <button type="button" class="btn btn-default btn-lg">Conviertete en conductor</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </section>
+<!--     <section id="tarifas">
+                  <div>
+              <h2>Descarga la nueva app</h2>
+              <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
+              <p>Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir.</p>
+            </div>
+    </section> -->
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Incluir todos tus scripts apartir de este punto -->
