--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap -->
     <link href="assets/css/main.css" rel="stylesheet">
     <title>LabCar | Laboratoria</title>
+    <script src="https://use.fontawesome.com/18642168a3.js"></script>
     <!-- HTML5 Shim and Respond.js Agrega soporte para elementos HTML5 y media quieries en IE8 -->
     <!-- ADVERTENCIA: Respond.js no soporta que ejecutes tu código via file:// -->
     <!--[if lt IE 9]>
@@ -56,7 +57,7 @@
             </div>
             <p>Registrate</p>
             <div class="tercerP">
-              <hr>
+              <hr class="des">
             </div>
             <button type="button" class="btn btn-default">Conviertete en un conductor</button>
         </div>
@@ -101,19 +102,97 @@
           </div>
         </div>
       </div>
-      
     </section>
-<!--     <section id="tarifas">
-                  <div>
-              <h2>Descarga la nueva app</h2>
-              <p>La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
-              <p>Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir.</p>
+    <section id="tarifas">
+      <div class="container">
+        <div class="row paddingContent">
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <h2>Tarifas</h2>
+            <p>Consulta las tarifas LabCar aquí</p>
+            <form id="form1">
+              <div class="form-group">
+                <label class="sr-only" for="origen">Origen</label>
+                <div class="input-group widthInput border-shadow">
+                  <label class="input-group-addon addonPersonal"><i class="glyphicon glyphicon-record" aria-hidden="true"></i></label>
+                  <input type="text" class="form-control" id="input-origen" placeholder="Ingrese su punto de partida">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="sr-only" for="destino">Destino</label>
+                <div class="input-group widthInput border-shadow">
+                  <label class="input-group-addon addonPersonal"><i class="glyphicon glyphicon-send" aria-hidden="true"></i></label>
+                  <input type="text" class="form-control" id="input-destino" placeholder="Ingrese su destino">
+                </div>
+              </div>
+              <div class="form-group">
+                <button id="trazar-ruta" type="submit" class="btn btn-default center-block">¡Trazar Ruta!</button>
+              </div>
+            </form> 
+            <div id="tarifa" class="none flexible">
             </div>
-    </section> -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-6 borderMap">
+            <div id="map"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+   <!--  https://fiorellaqa.github.io/LabCar/ -->
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="assets/img/logo-blanco.png" alt="Logo">
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-offset-4 col-sm-4">
+            <ul class="nav">
+              <li><a href="#">Viaja</a></li>
+              <li><a href="#">Conduce</a></li>
+              <li><a href="#">Ciudades</a></li>
+              <li><a href="#">Tarifas</a></li>
+              <li><a href="#">Entregas</a></li>
+              <li><a href="#">Cómo funciona</a></li>
+              <li><a href="#">Países</a></li>
+              <li><a href="#">Seguridad</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <ul class="nav">
+              <li><a href="#">Oportunidades</a></li>
+              <li><a href="#">Nuestra historia</a></li>
+              <li><a href="#">API de LabCar</a></li>
+              <li><a href="#">Eventos</a></li>
+              <li><a href="#">Desarrolladores</a></li>
+              <li><a href="#">Servicios</a></li>
+              <li><a href="#">Laboratoria</a></li>
+              <li><a href="#">Coders</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12"">
+            <ul class="nav navbar-nav">
+              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-apple" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-play" aria-hidden="true"></i></i></a></li>
+            </ul><br><br>
+            <hr>
+            <p class="text-center">© 2017 LabCar technologies Inc.</p>
+          </div>
+        </div>
+
+      </div>
+    </footer>
     <!-- jQuery (necesario para que funcionen los componentes de Bootstrap) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Incluir todos tus scripts apartir de este punto -->
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/app.js" type="text/javascript"></script>
+     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbG5e2NH-wNkCOEZSKVBX-E53Hco8ffwc&callback=initMap&libraries=places"></script>
   </body>
 </html>
